--- a/src/component/footer/footer.scss
+++ b/src/component/footer/footer.scss
@@ -11,5 +11,8 @@ footer{
    font-size: 17px;
     bottom: 0%;
     width: 100%;
-    padding-left: 2%;
+    font-family: sans-serif;
+    text-align: center;
+    text-shadow: 2px 2px 5px #ece1e1;
+
 }
