--- a/src/component/form/form.scss
+++ b/src/component/form/form.scss
@@ -26,7 +26,9 @@ form {
     }
   }
 }
-
+textarea {
+  margin-left: 1%;
+}
 .results {
   background: #efefef;
   border: 1px solid #ccc;
@@ -39,4 +41,23 @@ form {
     margin: 1rem;
   }
 }
+.loading-true {
+  .container{
+    display: none;
+  }
 
+  border: 20px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid rgb(127, 196, 158);
+  border-right: 16px solid rgb(58, 87, 58);
+  border-bottom: 16px solid rgb(192, 75, 176);
+  border-left: 16px solid rgb(243, 217, 101);
+  width: 100px;
+  height: 100px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
