--- a/src/component/header/header.scss
+++ b/src/component/header/header.scss
@@ -3,7 +3,7 @@ $h1Color:white;
 
 header{
   background-color: $headerBackground;
-  padding: 2%;
+  padding: 1%;
   box-shadow: 3px 4px 5px #2f2e2e;
   h1{
     margin: 0% 0%;
@@ -11,5 +11,12 @@ header{
   font-size: 38px;
   text-align: center;
   text-shadow: 1px 1px 2px black, 0 0 25px #47477d, 0 0 5px #d61a50;
+  }
+  li {
+    display: inline;
+    font-variant: all-small-caps;
+    margin-right: 75px;
+    font-family: cursive;
+    text-decoration: none;
   }
 }
